--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -31,11 +31,15 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
 
 .test4{
+  width: 600px;
+}
 
-  object-fit: scale-down;
+.image-box{
+  /* width: 200px;
+  height: 600px; */
+}
 
-
-
+.post-image{
 
 }
 
