--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -29,15 +29,17 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 }
 
 
-
-.test4{
-
-  object-fit: scale-down;
-
-
-
-
+.imageContainer{
+  width:650px;
+  height:300px;
 }
+
+.card img {
+    object-fit: scale-down;
+    width: 100%;
+    height: 100%;
+}
+
 
 .box-buttons > .row {
 
@@ -226,17 +228,13 @@ header {
 
 
   .cards {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
     grid-gap: 20px;
 }
 
 
-.card img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
+
 
 
 .maxHeightPost{
