--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -23,19 +23,20 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
   min-height: 70px;
   margin: 0 auto;
-  width:625px;
+  width:615px;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.06);
 
 }
 
 
 .imageContainer{
-  width:650px;
-  height:300px;
+  width:610px;
+  height:625px;
+
 }
 
 .card img {
-    object-fit: scale-down;
+    object-fit: cover;
     width: 100%;
     height: 100%;
 }
