--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -36,7 +36,7 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 }
 
 .imageContainer img {
-    object-fit: scale-down;
+    object-fit: cover;
     width: 100%;
     height: 100%;
 }
