--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -17,11 +17,14 @@ width: 100%;
 
 .cardAlign{
   position: absolute;
+
   top: 50%;
-  left:45%;
-  font-size: 20px;
+  left:38%;
+  font-size: 18px;
   transform: translateY(-50%);
 }
+
+
 
 .topCard {
   position: relative;
@@ -29,13 +32,38 @@ width: 100%;
   background: #FFFFFF;
   padding: 20px;
   width:230px;
-  height:50%;
-  border-radius: 8px;
-
-
+  border-radius: 6px;
+  height:80px;
+  margin-right: 20px;
 box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
 }
+
+
+
+.share{
+
+  width:60px;
+  height:60px;
+  background:#ff9100;
+  position: absolute;
+
+  top: 10%;
+  left:5%;
+
+  z-index:999;
+  text-align:center;
+  overflow:hidden;
+  line-height:65px;
+  font-size:1.5em;
+  color:#fff;
+  -moz-box-shadow: 0px 3px 3px rgba(0,0,0,.5);
+-webkit-box-shadow: 0px 3px 9px rgba(0,0,0,.5);
+box-shadow: 0px 3px 9px rgba(0,0,0,.5);
+  border-radius:50px;
+
+}
+
 
 
 .circle {
@@ -57,27 +85,6 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
   top: 50%;
   transform: translate(-50%, -50%);
   width: 50%;
-}
-
-
-.share{
-
-  width:60px;
-  height:60px;
-  background:#ff9100;
-  top:300px;
-
-  z-index:999;
-  text-align:center;
-  overflow:hidden;
-  line-height:65px;
-  font-size:1.5em;
-  color:#fff;
-  -moz-box-shadow: 0px 3px 9px rgba(0,0,0,.5);
--webkit-box-shadow: 0px 3px 9px rgba(0,0,0,.5);
-box-shadow: 0px 3px 9px rgba(0,0,0,.5);
-  border-radius:50px;
-
 }
 
 
