--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -19,7 +19,7 @@ width: 100%;
   position: absolute;
 
   top: 50%;
-  left:38%;
+  left:43%;
   font-size: 18px;
   transform: translateY(-50%);
 }
@@ -30,13 +30,14 @@ width: 100%;
   position: relative;
 
   background: #FFFFFF;
-  padding: 20px;
-  width:230px;
-  border-radius: 6px;
+
+  width:225px;
+  padding:45px;
+  border-radius: 20px;
   height:80px;
   margin-right: 20px;
 box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
-
+margin-bottom: 50px;
 }
 
 
@@ -48,7 +49,7 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
   background:#ff9100;
   position: absolute;
 
-  top: 10%;
+  top: 15%;
   left:5%;
 
   z-index:999;
