--- a/frontend/src/components/ProfileComponents/ProfilePage.css
+++ b/frontend/src/components/ProfileComponents/ProfilePage.css
@@ -1,22 +1,88 @@
 .profilePage{
-  /* background-color: red; */
+  background-color: white;
   position: relative;
   left:2%;
   width: 1760px;
-  /* bottom: 25px; */
+  bottom: 30px;
+  padding-top: 40px;
   /* align-items: center; */
 }
 
 .profilePage .profileInfo{
   /* position: absolute; */
   position: relative;
-  height: 300px;
+  height: 100%;
   width: 1200px;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
+  align-items: center;
+  align-content: center;
   font-size: 20px;
   /* background-color: blue; */
+}
+
+.profileName {
+  /* background-color: red; */
+  font-size: 45px;
+  font-weight: 100px;
+  color: black;
+}
+
+.profileBio{
+  /* background-color: red; */
+  padding: 40px 0px;
+  width:550px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.followButton{
+  background-color: red;
+  padding-top: 4px;
+  /* position: absolute; */
+  width: 97px;
+  height: 38px;
+  border: 1px solid;
+  /* background: transparent; */
+  border-radius: 10px;
+  /* color: #fff; */
+  cursor: pointer;
+  user-select: none;
+  overflow: hidden;
+  z-index: 2;
+  transition: 0.5s;
+}
+
+.following{
+  /* background-color: red; */
+  position: relative;
+  padding-top: 60px;
+}
+
+
+.profilePostFollow{
+  /* background-color: red; */
+  display: flex;
+  flex-direction: row;
+  padding: 0px 10px;
+  width: 650px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.followItem{
+  flex-grow: 1;
+  flex-basis: 0;
+}
+
+.postFollowWords{
+  color: lightgrey;
+  font-size: 20px;
 }
 
 .background{
@@ -37,7 +103,7 @@
 }
 
 .profilePic{
-  background-color: yellow;
+  /* background-color: yellow; */
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -46,7 +112,9 @@
   /* bottom:45%; */
   transform: translateX(-50%);
   overflow: hidden;
-  border: 3px solid white;
+  /* margin: 2px; */
+  /* padding: 2px; */
+  /* border: 3px solid white; */
   z-index: 1;
 }
 
@@ -55,11 +123,107 @@
 }
 
 .cal-post-pic{
-  /* background-color: red; */
+  background-color: red;
   border-top: 2px gainsboro solid;
   width: 1000px;
   position: relative;
   left: 50%;
   transform: translateX(-50%);
   height: 700px;
+}
+
+
+/* This is for the tab changes */
+.profile-tabContainer {
+  position: relative;
+  top: 50px;
+  /* left: 40px; */
+  bottom: 28px;
+  width: 1760px;
+  height: 100%;
+  background-color: #ffffff;
+  /* background-color: red; */
+}
+
+.profile-tabContainer .profile-buttonContainer{
+
+  height: 60px;
+  width: 33.33%;
+  position: relative;
+  left: 33.33%;
+  top: 2%;
+  display: flex;
+  text-align: center;
+  /* margin-top: 10px; */
+  /* background-color: red; */
+  padding-top: 30px;
+  margin-bottom: 10px;
+  /* padding-bottom: 5px; */
+  }
+
+
+
+.profile-tabContainer .profile-buttonContainer .profile-Tab{
+  width: 33.3333%;
+  height: 100%;
+  position: relative;
+  /* float:none; */
+  border-bottom: 1px grey solid;
+  /* background: transparent; */
+  /* border-radius: 25px; */
+  outline: none;
+  cursor: pointer;
+  /* padding: 10px; */
+  font-family: sans-serif;
+  font-size: 15px;
+  /* background-color: #ffffff; */
+  /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
+}
+
+.profile-description_tab{
+  float: left;
+	width: 33.333%;
+	text-align: center;
+}
+
+.profile-description_tab:first-child.profile-active ~ .profile-slider {
+			left: 0;
+}
+
+.profile-description_tab:nth-child(2).profile-active ~ .profile-slider {
+			left: 33.333%;
+}
+
+.profile-description_tab:nth-child(3).profile-active ~ .profile-slider {
+			left: 66.666%;
+}
+
+
+.profile-tabContainer .profile-buttonContainer button:hover {
+  background-color: #DCDCDC;
+}
+
+.profile-slider {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 33.333%;
+		height: 2px;
+		background-color: grey;
+		transition: .5s;
+}
+
+.profile-tabContainer .profile-tabPanel{
+  height: 85%;
+  background-color: gray;
+  color: #363636;
+  text-align: center;
+  align-items: center;
+  align-content: center;
+  padding-top: 2%;
+  font-family: sans-serif;
+  font-size: 22px;
+  display: none;
+  overflow: auto;
+  height: 850px;
 }
