--- a/frontend/src/components/ProfileComponents/ProfilePage.css
+++ b/frontend/src/components/ProfileComponents/ProfilePage.css
@@ -36,9 +36,56 @@
   position: relative;
   left: 50%;
   transform: translateX(-50%);
+  font-size: 15px;
+}
+
+.profileButtons{
+  /* background-color: red; */
+  width: 510px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: space-between;
+  /* justify-content: center; */
 }
 
 .followButton{
+  /* background-color: red; */
+  padding-top: 4px;
+  /* position: absolute; */
+  width: 250px;
+  height: 38px;
+  /* border: 1px solid; */
+  background: deepskyblue;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  user-select: none;
+  overflow: hidden;
+  z-index: 2;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
+}
+
+.messageButton{
+  /* background-color: red; */
+  padding-top: 4px;
+  /* position: absolute; */
+  width: 250px;
+  height: 38px;
+  /* border: 1px solid; */
+  /* background: transparent; */
+  border-radius: 5px;
+  /* color: #fff; */
+  cursor: pointer;
+  user-select: none;
+  overflow: hidden;
+  z-index: 2;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+}
+
+.unFollowButton{
   background-color: red;
   padding-top: 4px;
   /* position: absolute; */
@@ -46,7 +93,7 @@
   height: 38px;
   border: 1px solid;
   /* background: transparent; */
-  border-radius: 10px;
+  border-radius: 5px;
   /* color: #fff; */
   cursor: pointer;
   user-select: none;
