further modal changes

--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -3,9 +3,15 @@
 /* temporary for test to see card look */
 
 
-.modalContainer{
+.modalInnerContainer{
   display: flex;
 }
+
+
+  .modalOuterContainer{
+
+  }
+
 
 
 
