--- a/frontend/src/components/ProfileComponents/ProfilePage.css
+++ b/frontend/src/components/ProfileComponents/ProfilePage.css
@@ -74,6 +74,23 @@
   /* position: absolute; */
   width: 250px;
   height: 38px;
+  border: 1px solid;
+  /* background: transparent; */
+  border-radius: 5px;
+  /* color: #fff; */
+  cursor: pointer;
+  user-select: none;
+  overflow: hidden;
+  z-index: 2;
+  /* box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
+}
+
+.unFollowButton{
+  /* background-color: red; */
+  padding-top: 4px;
+  /* position: absolute; */
+  width: 250px;
+  height: 38px;
   /* border: 1px solid; */
   /* background: transparent; */
   border-radius: 5px;
@@ -83,23 +100,6 @@
   overflow: hidden;
   z-index: 2;
   box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
-}
-
-.unFollowButton{
-  background-color: red;
-  padding-top: 4px;
-  /* position: absolute; */
-  width: 97px;
-  height: 38px;
-  border: 1px solid;
-  /* background: transparent; */
-  border-radius: 5px;
-  /* color: #fff; */
-  cursor: pointer;
-  user-select: none;
-  overflow: hidden;
-  z-index: 2;
-  transition: 0.5s;
 }
 
 .following{
