--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -7,12 +7,18 @@
   display: flex;
 }
 
+.modalInnerPicture{
 
+}
   .modalOuterContainer{
-
+    background: red;
   }
 
-
+.modalCardBorder{
+  border: 1px solid #d9d9d9;
+  margin-right: 200px;
+  padding:30px;
+}
 
 
 
