--- a/frontend/src/containers/CurrUser/CurrUserProfile.css
+++ b/frontend/src/containers/CurrUser/CurrUserProfile.css
@@ -71,6 +71,10 @@
   /* box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
 }
 
+.editProfileButton:hover{
+  background-color: gainsboro;
+}
+
 .following{
   /* background-color: red; */
   position: relative;
@@ -148,6 +152,29 @@
 
 .defaultProfile-pic:hover{
   filter: brightness(90%);
+
+}
+
+.editButton{
+  cursor: pointer;
+  font-size: 40px;
+  color: blue;
+  /* background-color: white; */
+  /* border: 1px black solid; */
+  width: 50px;
+  height: 50px;
+  /* border-radius: 50%; */
+  /* padding-left: 9px; */
+  /* padding-bottom: -10px; */
+  text-align: center;
+  position: absolute;
+  left: 52.5%;
+  top: 13%;
+  z-index: 1;
+}
+
+.editButton:hover {
+  transform: scale(1.1);
 }
 
 .cal-post-pic{
