--- a/frontend/src/containers/CurrUser/CurrUserProfile.css
+++ b/frontend/src/containers/CurrUser/CurrUserProfile.css
@@ -8,6 +8,13 @@
   /* align-items: center; */
 }
 
+.uploadProfileText{
+  position: relative;
+  left: 27%;
+  font-size: 20px;
+  /* transform: translateX(-50%) */
+}
+
 .profilePage .profileInfo{
   /* position: absolute; */
   position: relative;
@@ -122,7 +129,7 @@
   bottom: -100%;
 }
 
-.profilePic{
+.curProfilePic{
   /* background-color: yellow; */
   width: 200px;
   height: 200px;
@@ -138,8 +145,14 @@
   z-index: 1;
 }
 
-.profile-pic{
-  height: 125%;
+.cur-profile-pic{
+  /* width: 100%; */
+
+  height: 152%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  /* z-index: 5; */
 
 }
 
