--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -2,6 +2,25 @@
 /* https://bootsnipp.com/snippets/rlxj6 */
 /* temporary for test to see card look */
 
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.alignleft {
+	float: left;
+  text-indent: 55px;
+}
+.alignright {
+	float: right;
+}
+
+.customDivider {
+  border-top: 1px solid #f0f0f0;
+
+}
+
 
 .modalInnerContainer{
   display: flex;
@@ -214,6 +233,7 @@ background: linear-gradient(to bottom, #2193b0, #6dd5ed); /* W3C, IE 10+/ Edge, 
 }
 
 
+
 .innerSeeMore {
   display: inline-block;
 }
@@ -263,29 +283,16 @@ header {
   color: rgb(20, 24, 35);
   font-size: 14px;
   font-weight: normal;
-  height: 19px;
-  line-height: 19.3199996948242px;
+
   margin-left: 15px;
   overflow-x: hidden;
   overflow-y: hidden;
 
   cursor: pointer;
-  padding-top: 0px;
   text-align: left;
-  width: 86px;
-}
-.fb-group-date {
-  color: rgb(145, 151, 163);
-
-  font-size: 14px;
-  font-weight: normal;
-  height: auto;
-  line-height: 16.0799999237061px;
-  margin-left: 55px;
-
-  width: auto;
 
 }
+
 
 
 .avatarPic {
