--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -77,7 +77,7 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
 .imageContainer{
   width:620px;
-  height:625px;
+  height:325px;
 
 }
 
@@ -86,6 +86,29 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
     width: 100%;
     height: 100%;
 }
+
+.TwoImageContainer {
+  display: flex;
+}
+
+.firstHalfImage{
+  width:320px;
+  height:425px;
+
+}
+.secondHalfImage{
+  width:320px;
+  height:425px;
+
+}
+
+
+.firstHalfImage .secondHalfImage img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
 
 
 .box-buttons > .row {
