--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -77,10 +77,22 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
 .imageContainer{
   width:620px;
+  height:625px;
+
+}
+
+
+.TwoHalfImageContainer{
+  width:320px;
   height:325px;
 
 }
 
+.TwoHalfImageContainer img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
 .imageContainer img {
     object-fit: cover;
     width: 100%;
@@ -89,24 +101,6 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
 .TwoImageContainer {
   display: flex;
-}
-
-.firstHalfImage{
-  width:320px;
-  height:425px;
-
-}
-.secondHalfImage{
-  width:320px;
-  height:425px;
-
-}
-
-
-.firstHalfImage .secondHalfImage img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
 }
 
 
