--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -14,7 +14,7 @@
 
 .alignleft {
 	float: left;
-  text-indent: 55px;
+  text-indent: 47px;
 }
 .alignright {
 	float: right;
@@ -82,9 +82,22 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 }
 
 
+.imageContainer img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+
+.TwoImageContainer {
+  display: flex;
+}
+
+
 .TwoHalfImageContainer{
   width:320px;
   height:325px;
+
 
 }
 
@@ -93,15 +106,59 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
     width: 100%;
     height: 100%;
 }
-.imageContainer img {
+
+
+
+.ThreeImageContainer {
+  display: flex;
+}
+
+
+.FirstThirdImageContainer{
+  width:320px;
+  height:325px;
+
+
+}
+
+.FirstThirdImageContainer img {
     object-fit: cover;
     width: 100%;
     height: 100%;
 }
 
-.TwoImageContainer {
-  display: flex;
+
+
+.SecondThirdImageContainer{
+  width:320px;
+  height:162px;
 }
+
+.SecondThirdImageContainer img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.ThreeThirdImageContainer{
+  width:320px;
+  height:325px;
+}
+
+.ThreeThirdImageContainer img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+
+.FirstThirdImageContainer img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+
 
 
 
