--- a/frontend/src/containers/CurrUser/CurrUserProfile.css
+++ b/frontend/src/containers/CurrUser/CurrUserProfile.css
@@ -132,13 +132,14 @@
 .curProfilePic{
   /* background-color: yellow; */
   width: 200px;
-  height: 200px;
-  border-radius: 50%;
+  height: 180px;
+  /* border-radius: 50%; */
   position: relative;
   left: 50%;
+  text-align: center;
   /* bottom:45%; */
   transform: translateX(-50%);
-  overflow: hidden;
+
   /* margin: 2px; */
   /* padding: 2px; */
   /* border: 3px solid white; */
@@ -170,7 +171,7 @@
 
 .editButton{
   cursor: pointer;
-  font-size: 40px;
+  font-size: 30px;
   color: blue;
   /* background-color: white; */
   /* border: 1px black solid; */
@@ -181,8 +182,8 @@
   /* padding-bottom: -10px; */
   text-align: center;
   position: absolute;
-  left: 52.5%;
-  top: 13%;
+  left: 53%;
+  top: 12.5%;
   z-index: 1;
 }
 
