--- a/frontend/src/components/ProfileComponents/ProfilePage.css
+++ b/frontend/src/components/ProfileComponents/ProfilePage.css
@@ -153,13 +153,13 @@
 .profilePic{
   /* background-color: yellow; */
   width: 200px;
-  height: 200px;
-  border-radius: 50%;
+  height: 180px;
   position: relative;
   left: 50%;
   /* bottom:45%; */
+  text-align: center;
   transform: translateX(-50%);
-  overflow: hidden;
+  /* overflow: hidden; */
   /* margin: 2px; */
   /* padding: 2px; */
   /* border: 3px solid white; */
