got the pictures showing up in the modal

--- a/frontend/src/components/labelCSS/SocialModal.css
+++ b/frontend/src/components/labelCSS/SocialModal.css
@@ -1,9 +1,52 @@
+.socialModal {
+  position: relative;
+  /* background-color: red; */
+  top: 0px;
+}
+
 .socialHolder{
   /* background-color: red; */
   display: flex;
+  height: 920px;
 }
 
+
+
 .socialHolder .socialCarousel{
-  width: 50%;
+  width: 1100px;
   height: 100%;
+}
+
+.socialHolder .socialCarouselSingle{
+  width: 215%;
+  height: 920px;
+  /* background-color: red; */
+  text-align: center;
+  overflow: hidden;
+}
+
+.socialHolder .socialCarouselSingle .singlePic{
+  /* position: relative; */
+  position: relative;
+  /* left: 50%; */
+  /* transform: translateX(-50%); */
+  height: 920px;
+  /* width: 1100px; */
+}
+
+.picturesRoll{
+  /* height:800px; */
+  /* background-color: #000000cc; */
+  overflow: hidden;
+  height: 920px;
+
+
+}
+
+.picturesRoll .socialImages{
+  position: relative;
+  height: 100%;
+  left: 50%;
+  transform: translateX(-50%)
+  /* top: 50%; */
 }
