--- a/frontend/src/components/labelCSS/SocialModal.css
+++ b/frontend/src/components/labelCSS/SocialModal.css
@@ -4,6 +4,15 @@
   top: 0px;
 }
 
+.socialModal .socialModalDate{
+  /* background-color: red; */
+  text-align: center;
+  font-size: 20px;
+  position:relative;
+  top: 5px;
+  left: 100px;
+}
+
 .socialHolder{
   /* background-color: red; */
   display: flex;
@@ -39,6 +48,37 @@
 .socialModalRight {
   /* background-color: red; */
   /* padding: 20px; */
+}
+
+.socialModalRight .socialNameTag {
+  /* background-color: red; */
+  height: 80px;
+  display: flex;
+  padding: 20px;
+}
+
+
+.socialModalRight .socialNameTag .socialNameUsername{
+    /* background-color: red; */
+    position: relative;
+    left: 5px;
+    bottom: 5px;
+    font-weight: 500;
+
+}
+
+.socialModalRight .socialNameTag .socialProfileImage {
+  position: relative;
+  /* top: 20%; */
+}
+
+.socialModalRight .socialNameTag .socialName {
+  /* background-color: red; */
+  position: relative;
+  left: 0%;
+  top: 0%;
+  font-size: 22px;
+  margin-left: 10px;
 }
 
 .socialListBox{
@@ -111,7 +151,7 @@
 
 .socialCommentBox {
   /* background-color: blue; */
-  height: 70%;
+  height: 62%;
 }
 
 
