adjusted the date

--- a/frontend/src/components/labelCSS/SocialModal.css
+++ b/frontend/src/components/labelCSS/SocialModal.css
@@ -86,6 +86,7 @@
   padding: 15px;
   border: 1px solid gainsboro;
   height: 275px;
+  width: 450px;
   overflow: auto;
 
 }
@@ -150,8 +151,9 @@
 }
 
 .socialCommentBox {
-  /* background-color: blue; */
+  background-color: blue;
   height: 62%;
+  /* width: 50%; */
 }
 
 
