--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -1,6 +1,16 @@
 /* http://jsfiddle.net/zbt5L1wp/4/ */
 /* https://bootsnipp.com/snippets/rlxj6 */
 /* temporary for test to see card look */
+
+
+.LikeCommentHover:hover {
+  color: #3399FF;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+
+
 .dividerTest{
   border-top: 3px solid #bbb;
 
