--- a/frontend/src/containers/Container_CSS/SocialCal.css
+++ b/frontend/src/containers/Container_CSS/SocialCal.css
@@ -134,6 +134,10 @@
   z-index: 3;
 }
 
+.socialCalendar .body .row .hoverCell{
+  /* background-color: red; */
+}
+
 .socialCalendar .body .row .hoverCell:hover{
   /* width: 10px; */
   /* height: 150px; */
