--- a/frontend/src/components/labelCSS/SocialModal.css
+++ b/frontend/src/components/labelCSS/SocialModal.css
@@ -390,3 +390,14 @@
   transform: translateX(-50%)
   /* top: 50%; */
 }
+
+
+.ant-upload-select-picture-card i {
+  color: #999;
+  font-size: 32px;
+}
+
+.ant-upload-select-picture-card .ant-upload-text {
+  margin-top: 8px;
+  color: #666;
+}
