--- a/frontend/src/containers/Container_CSS/SocialCal.css
+++ b/frontend/src/containers/Container_CSS/SocialCal.css
@@ -103,6 +103,9 @@
   z-index: 1;
 
 }
+.socialCalendar .body .row .hoverCell .plusButton:hover{
+  transform: scale(1.2);
+}
 
 .socialCalendar .body .row .hoverCell .eyeButton{
   position:absolute;
@@ -114,6 +117,10 @@
 
   /* transition: 0.5s; */
 }
+.socialCalendar .body .row .hoverCell .eyeButton:hover{
+  transform: scale(1.2)
+}
+
 
 .socialCalendar .body .row .hoverCell .eyeButtonPass{
   position:absolute;
@@ -123,6 +130,9 @@
   font-size: 40px;
   z-index: 1;
   /* transition: 0.5s; */
+}
+.socialCalendar .body .row .hoverCell .eyeButtonPass:hover{
+  transform: scale(1.2)
 }
 
 .socialCalendar .body .row .cell .bgD{
