--- a/frontend/src/components/labelCSS/SocialModal.css
+++ b/frontend/src/components/labelCSS/SocialModal.css
@@ -224,6 +224,19 @@
   margin-top: 10px;
   padding: 5px;
 }
+.socialCommentBox .socialCommentInput{
+  /* background-color: red; */
+  display: flex;
+  position: absolute;
+  left: 0%;
+  bottom: 200px;
+  margin-left: 20px;
+}
+.socialBoxInput{
+  width: 350px;
+  margin-left: 10px;
+  font-size: 15px;
+}
 .socialCommentBox .socialCommentItem .socialCommentNameTag{
   /* background-color: red; */
   display: flex;
