--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -24,6 +24,9 @@ width: 100%;
   transform: translateY(-50%);
 }
 
+.shadowBox{
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+}
 
 
 .topCard {
@@ -31,18 +34,31 @@ width: 100%;
 
   background: #FFFFFF;
 
-  width:225px;
-  padding:45px;
-  border-radius: 20px;
-  height:80px;
-  margin-right: 20px;
-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
-margin-bottom: 50px;
+  width:230px;
+  padding:30px;
+  height:70px;
+
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 }
 
 
 
 .share{
+
+
+
+  position: absolute;
+
+  top: 35%;
+  left:20%;
+
+
+
+}
+
+
+
+/* .share{
 
   width:60px;
   height:60px;
@@ -63,7 +79,7 @@ margin-bottom: 50px;
 box-shadow: 0px 3px 9px rgba(0,0,0,.5);
   border-radius:50px;
 
-}
+} */
 
 
 
@@ -206,7 +222,7 @@ color: #203758;
 
 
 .newsfeed {
-
+margin-left: 100px;
 
   minHeight: 0px;
   /* overflow:auto; */
